feat| resposive pages with media query

--- a/starter_code/pages/education.html
+++ b/starter_code/pages/education.html
@@ -25,5 +25,14 @@
                 Química Farmacéutica Biológica
             </h1>
         </section>
+
+        <section id="responsive">
+            <div class="responsive-info">
+                Párrafo info adicional
+            </div>
+            <div class="responsive-img">
+                <img src="./../src/img/matrix.jpg" alt="matrix project">
+            </div>
+        </section>
     </body>
 </html>
